--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "helmet": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.9.9"
+    "nodemailer": "^6.9.9",
+    "archiver": "^7.0.1",
+    "adm-zip": "^0.5.16"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
